--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -32,3 +32,14 @@ enable_wayland yes
 initial_window_width 1000
 initial_window_height 650
 remember_window_size no
+
+# Key Mapping
+map cmd+1 goto_tab 1
+map cmd+2 goto_tab 2
+map cmd+3 goto_tab 3
+map cmd+4 goto_tab 4
+map cmd+5 goto_tab 5
+map cmd+6 goto_tab 6
+map cmd+7 goto_tab 7
+map cmd+8 goto_tab 8
+map cmd+9 goto_tab 9
