--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -43,3 +43,8 @@ map cmd+6 goto_tab 6
 map cmd+7 goto_tab 7
 map cmd+8 goto_tab 8
 map cmd+9 goto_tab 9
+map ctrl+t new_tab
+map ctrl+tab next_tab
+map ctrl+shift+tab previous_tab
+map ctrl+w close_tab
+map ctrl+n new_window
