--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -48,3 +48,8 @@ map ctrl+tab next_tab
 map ctrl+shift+tab previous_tab
 map ctrl+w close_tab
 map ctrl+n new_window
+map ctrl+t new_tab
+map ctrl+tab next_tab
+map ctrl+shift+tab previous_tab
+map ctrl+w close_tab
+map ctrl+n new_window
